--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div id="main">
-    
-   </div> 
+   <section id="top-banner">
+    <div class="half-width">
+    <h1>Welcome To</h1>
+    <h1><span class="name">Tashed Amin </span>World</h1>
+    <h3>Web Developer and Urban And Regional Planning Student</h3>
+    <p>I am Nurul Amin Tashed. I am a student of Urban and Regional Planning at Chittagong University Of Engineering And Technology. I am learning web desiging from Jankar Mahbubs course. I am also using <a href="https://www.freecodecamp.org/" target="_blank">FreeCodeCamp</a> as a source.</p>
+    <a href="https://www.facebook.com/" target="_blank" class="anchor-button">Hire Me</a>
+    </div>
+    <div class="half-width">
+    <img src="mine.png" alt="Nurul Amin Tashed">
+    </div>
+</section> 
 </body>
 </html>
