--- a/index.html
+++ b/index.html
@@ -19,8 +19,20 @@
     <a href="https://www.facebook.com/" target="_blank" class="anchor-button">Hire Me</a>
     </div>
     <div class="half-width">
-    <img src="mine.png" alt="Nurul Amin Tashed">
+    <img src="images/mine.png" alt="Nurul Amin Tashed">
     </div>
 </section> 
+
+<section class="Dream-big">
+   <div class="second-half">
+<img src="images/mine2.png" alt="Tashed">
+   </div> 
+   <div class="second-half">
+<h2>Dream Big</h2>
+<h3>Become a Web Developer</h3>
+<p>I already learned basic HTML and CSS. I am learning javascript and other frameworks to become a master in web developing. </p>
+<a href="https://www.facebook.com/" target="_blank" class="anchor-button" class="download-button">DOWNLOAD RESUME</a>
+   </div>
+</section>
 </body>
 </html>
