--- a/index.html
+++ b/index.html
@@ -1,38 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-   <section id="top-banner">
-    <div class="half-width">
-    <h1>Welcome To</h1>
-    <h1><span class="name">Tashed Amin </span>World</h1>
-    <h3>Web Developer and Urban And Regional Planning Student</h3>
-    <p>I am Nurul Amin Tashed. I am a student of Urban and Regional Planning at Chittagong University Of Engineering And Technology. I am learning web desiging from Jankar Mahbubs course. I am also using <a href="https://www.freecodecamp.org/" target="_blank">FreeCodeCamp</a> as a source.</p>
-    <a href="https://www.facebook.com/" target="_blank" class="anchor-button">Hire Me</a>
-    </div>
-    <div class="half-width">
-    <img src="images/mine.png" alt="Nurul Amin Tashed">
-    </div>
-</section> 
 
-<section class="Dream-big">
-   <div class="second-half">
-<img src="images/mine2.png" alt="Tashed">
-   </div> 
-   <div class="second-half">
-<h2>Dream Big</h2>
-<h3>Become a Web Developer</h3>
-<p>I already learned basic HTML and CSS. I am learning javascript and other frameworks to become a master in web developing. </p>
-<a href="https://www.facebook.com/" target="_blank" class="anchor-button" class="download-button">DOWNLOAD RESUME</a>
-   </div>
-</section>
+<body>
+    <section class="top-banner flexible-container">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="name">Tashed Amin </span>World</h1>
+            <h3>Web Developer and Urban And Regional Planning Student</h3>
+            <p>I am Nurul Amin Tashed. I am a student of Urban and Regional Planning at Chittagong University Of
+                Engineering And Technology. I am learning web desiging from Jankar Mahbubs course. I am also using <a
+                    href="https://www.freecodecamp.org/" target="_blank">FreeCodeCamp</a> as a source.</p>
+            <a href="https://www.facebook.com/" target="_blank" class="anchor-button">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/mine.png" alt="Nurul Amin Tashed">
+        </div>
+    </section>
+
+    <section class="Dream-big flexible-container">
+        <div class="second-half">
+            <img src="images/mine2.png" alt="Tashed">
+        </div>
+        <div class="second-half">
+            <h2>Dream Big</h2>
+            <h3>Become a Web Developer</h3>
+            <p>I already learned basic HTML and CSS. I am learning javascript and other frameworks to become a master in
+                web developing. </p>
+            <a href="https://www.facebook.com/" target="_blank" class="anchor-button" class="download-button">DOWNLOAD
+                RESUME</a>
+        </div>
+    </section>
+    <Section class="experience-area">
+        <h1>Experiences</h1><br>
+        <div class="flexible-container">
+        <div id="full-stack-developer" class="experience-item">
+            <h2>Full Stack Developer</h2>
+            <h3 id="pro">2023-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment server and security. I will give you 100% web solution.
+            </p>
+        </div>
+        <div id="baby-web-developer" class="experience-item">
+            <h2>Baby Web Developer</h2>
+            <h3 id="learner">2022-2023 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remote web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+    </div>
+    </Section>
 </body>
+<footer>
+    <p>@ Tashed Amin 2023, a Programming Hero Initiative.</p>
+</footer>
 </html>
